--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Twitter Normalleştirici",
     "description": "Twitter logosunu 23 Temmuz 2023 öncesine döndürür",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "icons": {
         "16": "logo/logo-16.png",
         "48": "logo/logo-48.png",
@@ -13,10 +13,7 @@
         "default_title": "Twitter Normalleştirici",
         "default_popup": "popup/popup.html"
     },
-    "permissions": [
-        "scripting",
-        "activeTab"
-    ],
+    "permissions": [],
     "host_permissions": ["https://twitter.com/*", "https://x.com/*"],
     "content_scripts": [{
         "matches": ["https://twitter.com/*", "https://x.com/*"],
